# 20260209_TrendTracker

./: .gitignore  README.md
initial_version/: MATERIAL.md  README.md  app.py  pyproject.toml
initial_version/components/: loading.py  result_section.py  search_form.py  (+1 more)
learn_python_trpg/: README.md  certificate.py  display.py  exceptions.py  main.py  models.py
python_tutorial/: Practice5_Intermediate.ipynb  README.md  Step1_Basic_Syntax.ipynb  Step2_Control_Flow.ipynb  Step3_Data_Structures.ipynb  Step4_Functions_and_Modules.ipynb  Step5_Intermediate.ipynb  Step5_Intermediate.md  Step6_Projects.ipynb  note.ipynb  pyproject.toml
solve_test/: .env.example  README.md  analyze.ipynb  main.py  pyproject.toml
solve_test/ai/: __init__.py  gemini_client.py  gemini_multi_client.py
solve_test/data/: sample_korean.json  sample_math.json
solve_test/data/source/: 2023_11_KICE_flat.json  source.json
solve_test/doc/_01_initial_version/: _01_start.md  _02_refactor.md  _03_prompt.md  _04_pandas.md  _05_environment_variable.md  develope_app.md  develope_notebook.md
solve_test/doc/_02_multi_modal/: _01_image.md  develop_app.md
solve_test/domain/: __init__.py  problem.py
solve_test/output/: korean_results.csv  math_results.csv
solve_test/prompts/: __init__.py  prompt.py  prompt_multi.py
solve_test/repository/: __init__.py  problem_repository.py
solve_test/service/: __init__.py  solver_service.py
solve_test/utils/: __init__.py  exceptions.py
use_google_api_key/: main.py  notebook.ipynb  prompt.md  pyproject.toml
uv_python_dotenv/: README.md  pyproject.toml
(+52 files in other folders)
